fix calender picker icon in dark mode (#435)

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,3 +16,7 @@
 .dark .bg-dots {
   --dots-color: rgba(255, 255, 255, 0.08);
 }
+
+.dark input[type="date"]::-webkit-calendar-picker-indicator {
+  filter: invert(1);
+}
